2012-08-23  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/util/marks.jl: removed [fuchur]

	* lisp/sawfish/wm/tabs/tab.jl: implement mark-window here,
	fix an issue that tab didn't work anymore then a window
	selected for tabbing doesn't exist before tabbing was done.
	Change cursor shape when operating with tabs [fuchur]

	* man/news.texi: update

2012-07-11  Christopher Roy Bratusek <nano@tuxfamily.org>
	* debian/*.links: removed, fixed building on Debian Unstable

2012-07-07  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/integration/razor-qt.jl: add 'razor-about' to help
	sub-menu

	* configure.in: bump version to 1.9.1

	* man/news.texi: update

2012-07-05  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/ext/match-window.jl: call resize-window-with-hints*
	rather than resize-window-with-hints (fixes 'dimensions matcher)
	[Robert Zenz]
	
	* src/images.c: replace gdk_pixbuf_unref with g_object_unref [Togan Muftouglu]

	* src/windows.c: proper return in fake-release-window [Togan Muftouglu]

	COPYING
	lisp/sawfish/cfg/apply.jl
	lisp/sawfish/cfg/config.jl
	lisp/sawfish/cfg/group.jl
	lisp/sawfish/cfg/i18n.jl
	lisp/sawfish/cfg/layout.jl
	lisp/sawfish/cfg/layouts/keymaps.jl
	lisp/sawfish/cfg/main.jl
	lisp/sawfish/cfg/shell.jl
	lisp/sawfish/cfg/slot.jl
	lisp/sawfish/cfg/wm.jl
	lisp/sawfish/gtk/widget.jl
	lisp/sawfish/gtk/widgets/alist.jl
	lisp/sawfish/gtk/widgets/color.jl
	lisp/sawfish/gtk/widgets/command.jl
	lisp/sawfish/gtk/widgets/event.jl
	lisp/sawfish/gtk/widgets/file.jl
	lisp/sawfish/gtk/widgets/font.jl
	lisp/sawfish/gtk/widgets/frame-style.jl
	lisp/sawfish/gtk/widgets/keymap.jl
	lisp/sawfish/gtk/widgets/list.jl
	lisp/sawfish/gtk/widgets/match-window.jl
	lisp/sawfish/gtk/widgets/modifier-list.jl
	lisp/sawfish/gtk/widgets/pair.jl
	lisp/sawfish/gtk/widgets/scheme-boolean.jl
	lisp/sawfish/gtk/widgets/simple-dialog.jl
	lisp/sawfish/wm.jl
	lisp/sawfish/wm/animation/main.jl
	lisp/sawfish/wm/animation/modes.jl