@@ -1,3 +1,8 @@
+2012-08-27  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* Makedefs.in: include $(repexecdir)/rules.mk as first,
+	so that --prefix & co. from configure don't get overwritten.
+	[Allin Cottrell]
+
 2012-08-23  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/util/marks.jl: removed [fuchur]
 
